# windowsservice

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: example_service.py  example_service_multiprocessing.py
src/windowsservice/: __init__.py  service.py  utils.py
windowsservice/: __init__.py  example_service.py  example_service_multiprocessing.py  service.py  utils.py
