[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windowsservice"
description = "A Python package for building Windows services."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Hylke Postma", email = "info@hylkepostma.nl" },
]
keywords = [
    "multiprocessing",
    "pyinstaller",
    "python",
    "pywin32",
    "service",
    "windows",
    "windowsservice",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pywin32==306",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/windowsservice/__init__.py"

[project.optional-dependencies]
test = [
    "pytest >=7.2.0,<8.0.0",
    "pyinstaller >=6.5.0, <7"
]
dev = [
    "ruff",
    "black",
]
all = ["windowsservice[test, dev]"]

[project.urls]
Homepage = "https://github.com/hylkepostma/windowsservice"
Documentation = "https://github.com/hylkepostma/windowsservice#windowsservice"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["windowsservice"]